--- a/style.css
+++ b/style.css
@@ -3,83 +3,81 @@
   padding: 0;
   box-sizing: border-box;
 }
-.clearfix:after {
-  content: "";
-  display: block;
-  clear: both;
-}
 ul,
-ol {
+li {
   list-style: none;
 }
 img {
   max-width: 100%;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  background: grey;
+  align-items: center;
+  padding: 4px 0;
+}
 .logo {
   background: grey;
-  display: inline-block;
-  float: left;
-  margin-top: 8px;
+  display: flex;
+  align-items: center;
 }
 .logo > img {
   height: 26px;
   vertical-align: top;
-  margin-left: 10px;
-}
-.nav {
-  float: right;
   margin-left: 20px;
 }
+
+ul {
+  /* margin-left: auto; */
+  display: flex;
+}
 ul > li {
-  float: left;
-  padding: 4px 0.5em;
-  line-height: 32px;
+  padding: 4px;
+  margin-right: 10px;
   color: white;
 }
-ul {
-  display: inline-block;
-}
-header {
-  background: grey;
-}
+
 .content {
+  min-width: 800px;
+  display: flex;
   margin-top: 10px;
-  width: 800px;
   margin-left: auto;
   margin-right: auto;
 }
-.content > .aside {
+.content > aside {
+  background: #000;
   width: 200px;
-  height: 300px;
-  background: #777;
-  float: left;
 }
-.content > .main {
-  width: 500px;
-  height: 300px;
-  background: #ccc;
-  float: left;
+.content > main {
+  background: #666;
+  height: 400px;
+  flex-grow: 1;
 }
 .content > .ad {
   width: 100px;
-  height: 300px;
-  background: #ddd;
-  float: left;
+  background: #999;
 }
+
 .imageList {
-  width: 800px;
-  margin-right: auto;
+  min-width: 800px;
   margin-left: auto;
-  margin-top: 20px;
+  margin-right: auto;
+  justify-content: space-between;
 }
-.imageList > .x > .images {
+.image {
   width: 191px;
   height: 191px;
-  background: #ccc;
-  float: left;
-  margin-left: 12px;
-  margin-bottom: 10px;
+  background: grey;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-top: 10px;
+  border: 1px solid red;
 }
-.imageList > .x {
-  margin-left: -12px;
+.imageList > .inner {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -6px;
+  margin-right: -6px;
 }
